# Solvro-rekrutacja

./: README.md  main.py  pyproject.toml
data/: cocktail_dataset_preprocessed.pkl  cocktail_dataset_v1.pkl
helpers/: __init__.py  clustering.py  ingredients.py
notebooks/: clustering.ipynb  data_exploration_and_data_cleaning.ipynb  preprocessing.ipynb
notebooks/.ipynb_checkpoints/: clustering-checkpoint.ipynb  data_exploration_and_data_cleaning-checkpoint.ipynb  preprocessing-checkpoint.ipynb
solvro_rekrutacja.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
