[project]
name = "solvro_rekrutacja"
version = "0.1.0"
description = "Klasteryzacja koktajli zrobiona na rekrutacje do koła naukowego Solvro"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "pandas>=2.2.3",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
[tool.setuptools]
packages = ["helpers"]

[dependency-groups]
dev = [
    "ruff>=0.11.0",
]
